--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
                 top: 0px;
                 left: 0px;
                 z-index: 101;
-                background-image: url('https://nggyu.nyc3.cdn.digitaloceanspaces.com/desktopbg.png');
+                background-image: url('https://raw.githubusercontent.com/Loodelin321/gamedepot/main/Screenshot%202022-05-13%2012.22.41%20PM.png');
                 background-size: cover;
             }
 
             @media only screen and (max-width: 1050px) {
                 .cookie-consent-background {
-                    background-image: url('https://nggyu.nyc3.cdn.digitaloceanspaces.com/tabletbg.png');
+                    background-image: url('https://raw.githubusercontent.com/Loodelin321/gamedepot/main/Screenshot%202022-05-13%2012.22.41%20PM.png');
                 }
             }
 
             @media only screen and (max-width: 550px) {
                 .cookie-consent-background {
-                    background-image: url('https://nggyu.nyc3.cdn.digitaloceanspaces.com/mobilebg.png');
+                    background-image: url('https://raw.githubusercontent.com/Loodelin321/gamedepot/main/Screenshot%202022-05-13%2012.22.41%20PM.png');
                 }
             }
 
@@ -118,10 +118,10 @@
         <div class="cookie-consent-background"></div>
         <div class="cookie-consent-content">
             <h3 class="text-white">
-                Like everyone on the internet, we use cookies to improve your experience. If you're ok with that please click accept.
+                We use cookies to save your progress in these games, please accept.
             </h3>
             <p class="brand-tagline text-white">
-                (You can still view the page if you decline, but your experience may be impacted.)
+                (You can still play the games if you decline, you just wont be able to save.)
             </p>
             <p>
                 <button class="pure-button button-large">Accept</button>    
@@ -139,10 +139,10 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a class="pure-button" href="https://www.secretrickroll.com">Make your own!</a>
+                        
                     </li>
                     <li class="nav-item">
-                        <a class="pure-button" href="http://github.com/sorenrehkopf/custom-rick-roll">About this</a>
+                       
                     </li>
                 </ul>
             </nav>
